--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-5 col-xs-6 d-none d-sm-block">
+      <div class="col-md-5 col-xs-6 d-none d-md-block">
         <img src="assets/images/logo.png" alt="logo" width="160">
       </div>
     </div>
@@ -121,8 +121,8 @@
     </div>
 
     <div class="row">
-      <div class="col-md-2 col-xs-12">
-        <div class="company-list main-block p-2">
+      <div class="col-lg-2 col-sm-12">
+        <div class="company-list main-block p-2 mb-2">
           <div class="comp-list-header d-flex justify-content-between align-items-center border-bottom pb-1">
             <p class="purple-txt font-weight-bold fs-14">الشركات</p>
             <select class="comp-dropdown">
@@ -138,7 +138,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-8 col-xs-12 px-0">
+      <div class="col-lg-8 col-sm-12 px-0">
         <div class="col-md-12 main-block">
           <div class="company-status-bar">
             <ul class="list-inline list-unstyled d-flex justify-content-between pr-0 pt-3">
@@ -149,62 +149,62 @@
                   <span class="font-weight-bold black-txt">اسم الشركة</span>
                 </div>
                 <div>
-                  <img class="mr-4" src="assets/images/line chart icon.png" alt="line chart" width="80">
+                  <img class="mr-4 co-img" src="assets/images/line chart icon.png" alt="line chart" width="80">
                 </div>
               </li>
               <li class="border"></li>
               <li class="list-inline-item txt-center">
                 <div class="d-flex flex-column align-items-center">
-                  <p class="mb-2">اسهم العرض</p>
+                  <p class="mb-2 co-title">اسهم العرض</p>
                   <p class="value">60,046</p>
                 </div>
               </li>
               <li class="border"></li>
               <li class="list-inline-item txt-center">
                 <div class="d-flex flex-column align-items-center">
-                  <p class="mb-2">سعر العرض</p>
+                  <p class="mb-2 co-title">سعر العرض</p>
                   <p class="value or-bg px-2">40.859</p>
                 </div>
               </li>
               <li class="border"></li>
               <li class="list-inline-item txt-center">
                 <div class="d-flex flex-column align-items-center">
-                  <p class="mb-2"> السعر الحالي</p>
+                  <p class="mb-2 co-title"> السعر الحالي</p>
                   <p class="value gn-bg px-2">40.859</p>
                 </div>
               </li>
               <li class="border"></li>
               <li class="list-inline-item txt-center">
                 <div class="d-flex flex-column align-items-center">
-                  <p class="mb-2">سعر الطلب</p>
+                  <p class="mb-2 co-title">سعر الطلب</p>
                   <p class="value bu-bg px-2">40.846</p>
                 </div>
               </li>
               <li class="border"></li>
               <li class="list-inline-item txt-center">
                 <div class="d-flex flex-column align-items-center">
-                  <p class="mb-2">اسهم الطلب</p>
+                  <p class="mb-2 co-title">اسهم الطلب</p>
                   <p class="value">7,860</p>
                 </div>
               </li>
               <li class="border"></li>
               <li class="list-inline-item txt-center">
                 <div class="d-flex flex-column align-items-center">
-                  <p class="mb-2">التغيير % </p>
+                  <p class="mb-2 co-title">التغيير % </p>
                   <p class="value green-txt">0.39</p>
                 </div>
               </li>
               <li class="border"></li>
               <li class="list-inline-item txt-center">
                 <div class="d-flex flex-column align-items-center">
-                  <p class="mb-2"> اجمالي الاسهم</p>
+                  <p class="mb-2 co-title"> اجمالي الاسهم</p>
                   <p class="value">1,984,282</p>
                 </div>
               </li>
               <li class="border"></li>
               <li class="list-inline-item txt-center">
                 <div class="d-flex flex-column align-items-center">
-                  <p class="mb-2"> ريال</p>
+                  <p class="mb-2 co-title"> ريال</p>
                   <p class="value purple-txt">3,567,567</p>
                 </div>
               </li>
@@ -287,9 +287,9 @@
           </div>
         </div>
       </div>
-      <div class="col-md-2 col-xs-12">
+      <div class="col-lg-2 col-sm-12">
         <div class="market-price-block main-block p-2">
-          <ul class="nav nav-pills justify-content-between p-0 border-bottom" id="pills-tab" role="tablist">
+          <ul class="nav nav-pills justify-content-around p-0 border-bottom" id="pills-tab" role="tablist">
             <li class="nav-item" role="presentation">
               <button class="nav-link active p-0 pb-2" id="pills-home-tab" data-toggle="pill" data-target="#pills-home"
                 type="button" role="tab" aria-controls="pills-home" aria-selected="true">
@@ -310,8 +310,8 @@
                 <thead>
                   <tr>
                     <th scope="col">#</th>
-                    <th scope="col">الاسهم</th>
-                    <th scope="col">السعر</th>
+                    <th class="text-center" scope="col">الاسهم</th>
+                    <th class="text-center" scope="col">السعر</th>
                   </tr>
                 </thead>
                 <tbody>
