--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <i class="fa fa-qrcode fa-lg ml-1" aria-hidden="true"></i>
         <a href="#"> الدخول الذكي</a>
         <div class="custom-bo mr-3"></div>
-        <input class="form-control mr-sm-4" type="text">
-        <input class="form-control mr-sm-2" type="text">
+        <input class="form-control mr-sm-4" type="text" placeholder="اسم المستخدم" required>
+        <input class="form-control mr-sm-2" type="password" placeholder="كلمة المرور" required>
         <button class="btn border-0 btn-sm my-2 mx-2 my-sm-0 px-3" type="submit">
           <i class="fa fa-sign-in mx-1" aria-hidden="true"></i>
           دخول</button>
